error_log.txt
Traceback (most recent call last):
  File "C:\Users\Kirill\Desktop\ZTXAI\main.py", line 133, in <module>
    valorant_instance.start()
  File "C:\Users\Kirill\Desktop\ZTXAI\src\app.py", line 457, in start
    self.gui()
  File "C:\Users\Kirill\Desktop\ZTXAI\core\gui.py", line 1759, in gui
    self.render_group_combo()
  File "C:\Users\Kirill\Desktop\ZTXAI\core\model.py", line 34, in render_group_combo
    self.refresh_engine()
  File "C:\Users\Kirill\Desktop\ZTXAI\core\model.py", line 576, in refresh_engine
    left = int((self.screen_width - region_w) // 2 + offset_x)
                ~~~~~~~~~~~~~~~~~~^~~~~~~~~~
TypeError: unsupported operand type(s) for -: 'int' and 'str'
[Thread Exception] 2026-01-21 08:59:16
Traceback (most recent call last):
  File "C:\Users\legio\AppData\Local\Programs\Python\Python312\Lib\threading.py", line 1052, in _bootstrap_inner
    self.run()
  File "C:\Users\legio\AppData\Local\Programs\Python\Python312\Lib\threading.py", line 989, in run
    self._target(*self._args, **self._kwargs)
  File "E:\sunone_aimbot_cpp\sunone_aimbot_cpp\ZTXAI\core\aiming.py", line 565, in infer
    [cls_id in selected_classes_set for cls_id in all_class_ids],
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: unhashable type: 'numpy.ndarray'

[Thread Exception] 2026-01-21 08:59:26
Traceback (most recent call last):
  File "C:\Users\legio\AppData\Local\Programs\Python\Python312\Lib\threading.py", line 1052, in _bootstrap_inner
    self.run()
  File "C:\Users\legio\AppData\Local\Programs\Python\Python312\Lib\threading.py", line 989, in run
    self._target(*self._args, **self._kwargs)
  File "E:\sunone_aimbot_cpp\sunone_aimbot_cpp\ZTXAI\core\aiming.py", line 565, in infer
    [cls_id in selected_classes_set for cls_id in all_class_ids],
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: unhashable type: 'numpy.ndarray'

[Global Exception] 2026-01-21 11:19:44
Traceback (most recent call last):
  File "E:\sunone_aimbot_cpp\sunone_aimbot_cpp\ZTXAI\main.py", line 85, in <module>
    from src.app import Aassist
  File "E:\sunone_aimbot_cpp\sunone_aimbot_cpp\ZTXAI\src\app.py", line 16, in <module>
    from core.aiming import AimingMixin
  File "E:\sunone_aimbot_cpp\sunone_aimbot_cpp\ZTXAI\core\__init__.py", line 4, in <module>
    from .gui import GuiMixin
  File "E:\sunone_aimbot_cpp\sunone_aimbot_cpp\ZTXAI\core\gui.py", line 1786
    self.is_trt_checkbox = dpg.add_checkbox(
IndentationError: expected an indented block after 'with' statement on line 1785

[Thread Exception] 2026-01-21 11:25:54
Traceback (most recent call last):
  File "C:\Users\legio\AppData\Local\Programs\Python\Python312\Lib\threading.py", line 1052, in _bootstrap_inner
    self.run()
  File "C:\Users\legio\AppData\Local\Programs\Python\Python312\Lib\threading.py", line 989, in run
    self._target(*self._args, **self._kwargs)
  File "E:\sunone_aimbot_cpp\sunone_aimbot_cpp\ZTXAI\core\aiming.py", line 518, in infer
    boxes, scores, classes = sunone_postprocess(
                             ^^^^^^^^^^^^^^^^^^^
  File "E:\sunone_aimbot_cpp\sunone_aimbot_cpp\ZTXAI\src\infer_function.py", line 179, in sunone_postprocess
    detections = sunone_decode_yolo10(pred, shape, num_classes, img_scale, conf_threshold)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "E:\sunone_aimbot_cpp\sunone_aimbot_cpp\ZTXAI\src\infer_function.py", line 120, in sunone_decode_yolo10
    channels = shape[2]
               ~~~~~^^^
IndexError: tuple index out of range

[Thread Exception] 2026-01-21 11:26:09
Traceback (most recent call last):
  File "C:\Users\legio\AppData\Local\Programs\Python\Python312\Lib\threading.py", line 1052, in _bootstrap_inner
    self.run()
  File "C:\Users\legio\AppData\Local\Programs\Python\Python312\Lib\threading.py", line 989, in run
    self._target(*self._args, **self._kwargs)
  File "E:\sunone_aimbot_cpp\sunone_aimbot_cpp\ZTXAI\core\aiming.py", line 518, in infer
    boxes, scores, classes = sunone_postprocess(
                             ^^^^^^^^^^^^^^^^^^^
  File "E:\sunone_aimbot_cpp\sunone_aimbot_cpp\ZTXAI\src\infer_function.py", line 179, in sunone_postprocess
    detections = sunone_decode_yolo10(pred, shape, num_classes, img_scale, conf_threshold)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "E:\sunone_aimbot_cpp\sunone_aimbot_cpp\ZTXAI\src\infer_function.py", line 120, in sunone_decode_yolo10
    channels = shape[2]
               ~~~~~^^^
IndexError: tuple index out of range

[Thread Exception] 2026-01-21 11:27:25
Traceback (most recent call last):
  File "C:\Users\legio\AppData\Local\Programs\Python\Python312\Lib\threading.py", line 1052, in _bootstrap_inner
    self.run()
  File "C:\Users\legio\AppData\Local\Programs\Python\Python312\Lib\threading.py", line 989, in run
    self._target(*self._args, **self._kwargs)
  File "E:\sunone_aimbot_cpp\sunone_aimbot_cpp\ZTXAI\core\aiming.py", line 518, in infer
    boxes, scores, classes = sunone_postprocess(
                             ^^^^^^^^^^^^^^^^^^^
  File "E:\sunone_aimbot_cpp\sunone_aimbot_cpp\ZTXAI\src\infer_function.py", line 179, in sunone_postprocess
    detections = sunone_decode_yolo10(pred, shape, num_classes, img_scale, conf_threshold)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "E:\sunone_aimbot_cpp\sunone_aimbot_cpp\ZTXAI\src\infer_function.py", line 120, in sunone_decode_yolo10
    channels = shape[2]
               ~~~~~^^^
IndexError: tuple index out of range

[Global Exception] 2026-01-21 12:42:18
Traceback (most recent call last):
  File "E:\sunone_aimbot_cpp\sunone_aimbot_cpp\ZTXAI\main.py", line 85, in <module>
    from src.app import Aassist
  File "E:\sunone_aimbot_cpp\sunone_aimbot_cpp\ZTXAI\src\app.py", line 16, in <module>
    from core.aiming import AimingMixin
  File "E:\sunone_aimbot_cpp\sunone_aimbot_cpp\ZTXAI\core\__init__.py", line 4, in <module>
    from .gui import GuiMixin
  File "E:\sunone_aimbot_cpp\sunone_aimbot_cpp\ZTXAI\core\gui.py", line 1795
    ++                           
                                 ^
SyntaxError: invalid syntax

